updates for .env

--- a/try_sample/.env
+++ b/try_sample/.env
@@ -1,2 +1,2 @@
-NYT_API_KEY="NYT_test"
-TMDB_API_KEY="TMDB_test"
+NYT_API_KEY="LA5OYlCxAe3A03BiERaGQKsV261OFNQz"
+TMDB_API_KEY="531b73da1f535ec915b69d8228da9a77"
